Archive2/bf/e6aad38cd69d73/output
main.cpp: In function 'int main()':
main.cpp:4:12: error: 'R' was not declared in this scope
     printf(R"xxx(abc)xxx");
            ^
